<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="ca.saileshbechar.imhere.MainActivity"
    android:background="@drawable/bluebackground">

    <LinearLayout
        android:id="@+id/upperpanel"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_info3"
            android:gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:onClick="infoButtonClick" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/subtitle_text"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lowerpanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/coolthingsbot"
        android:orientation="vertical"
        android:columnCount="2"
        android:rowCount="6">

        <Button
            android:id="@+id/friend_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/friendbutton"
            android:gravity="bottom"
            android:text="@string/friend_default_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/friend_2"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/friendbutton"
            android:text="@string/friend_default_text"
            android:textAlignment="center" />


        <Button
            android:id="@+id/friend_3"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/friendbutton"
            android:text="@string/friend_default_text"
            android:textAlignment="center"
           />

        <Button
            android:id="@+id/friend_4"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/friendbutton"
            android:text="@string/friend_default_text"
            android:textAlignment="center"
        />



    </LinearLayout>



</LinearLayout>
